# CC232_Evaluaciones

./: .gitignore
Practicas/Practica_Calificada3-CC232/: CMakeLists.txt  README.md
Practicas/Practica_Calificada3-CC232/benchmark/: analisis_tiempo.md
Practicas/Practica_Calificada3-CC232/demos/: demo_merge_skew.cpp
Practicas/Practica_Calificada3-CC232/docs/: bitacora.md  respuestas_obligatorias.md
Practicas/Practica_Calificada3-CC232/include/: skew_heap.h
Practicas/Practica_Calificada3-CC232/resultados/: casos_borde.txt  ejecucion_pc3.txt  tests_pc3.txt
Practicas/Practica_Calificada3-CC232/src/: main.cpp  skew_heap.cpp
Practicas/Practica_Calificada3-CC232/tests/: test_skew_heap.cpp
Practicas/Practica_Calificada3-CC232/video/: enlace_video.txt
Semana4/: Actividad4-CC232.md
Semana5/: Actividad5-CC232.md
Semana6/: Actividad6-CC232.md
Semana7/: Actividad7-CC232.md
Semana8/: Actividad8-CC232.md
actividades/: Actividad4-CC232.md  Actividad5-CC232.md  Actividad6-CC232.md  actividad6_semana6.md
